# concurrency_library

./: CMakeLists.txt  main.cpp
channels/: channel.hpp  select.hpp
coroutines/stackful/: coroutine.hpp
coroutines/stackless/: task.hpp
detail/: spinlock.hpp  waitgroup.hpp
executors/: api.hpp  iexecutor.hpp  manual_executor.hpp  strand.hpp
executors/thread_pool/with_waitidle/: thread_pool.cpp  thread_pool.hpp
executors/thread_pool/without_waitidle/: thread_pool.cpp  thread_pool.hpp
fibers/: api.hpp  awaiters.hpp  fiber.cpp  fiber.hpp  fiber_handle.hpp  iawaiter.hpp
fibers/sync/: condition_variable.hpp  mutex.hpp  waitgroup.hpp
futures/: future.hpp  future_value.hpp  promise.hpp  result.hpp
futures/api/: all.hpp  execute.hpp  first_of.hpp  future.hpp
futures/callbacks/: icallback.hpp  recover_callback.hpp  subscribe_callback.hpp  then_callback.hpp
futures/detail/: type_traits.hpp
intrusive/structures/: bidirectional_list_node.hpp  list.hpp  queue.hpp  singly_directed_list_node.hpp  stack.hpp
intrusive/tasks/: default_task.hpp  itask.hpp  task_base.hpp
lockfree/: atomic_shared_ptr.hpp  queue.hpp  ring_queue.hpp  stack.hpp
